--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17
-	yarn_mappings=1.17+build.13
-	loader_version=0.11.6
+	minecraft_version=21w39a
+	yarn_mappings=21w39a+build.4
+	loader_version=0.11.7
 
 # Mod Properties
-	mod_version = 1.2.0
+	mod_version = 1.2.1
 	maven_group = ru.pinkgoosik
-	archives_base_name = goosiks-villager-hats
+	archives_base_name = villager-hats-mod
 
 # Dependencies
-	fabric_version=0.36.0+1.17
+	fabric_version=0.40.5+1.18
+	trinkets_version=3.0.4
