--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,4 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-
-# Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=21w39a
-	yarn_mappings=21w39a+build.4
-	loader_version=0.11.7
-
-# Mod Properties
-	mod_version = 1.2.1
-	maven_group = ru.pinkgoosik
-	archives_base_name = villager-hats-mod
-
-# Dependencies
-	fabric_version=0.40.5+1.18
-	trinkets_version=3.0.4
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
