--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=21w39a
-	yarn_mappings=21w39a+build.4
-	loader_version=0.11.7
+	# check these on https://fabricmc.net/develop
+	minecraft_version=1.18.1
+	yarn_mappings=1.18.1+build.22
+	loader_version=0.12.12
 
 # Mod Properties
-	mod_version = 1.2.1
+	mod_version = 1.3.0
 	maven_group = ru.pinkgoosik
 	archives_base_name = villager-hats-mod
 
 # Dependencies
-	fabric_version=0.40.5+1.18
-	trinkets_version=3.0.4
+	fabric_version=0.46.2+1.18
+	trinkets_version=3.2.0
