--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ group = project.maven_group
 
 repositories {
 	maven { url "https://maven.shedaniel.me" } //rei
-	maven { url "https://maven.gegy.dev" } //databreaker
+	maven { url "https://api.modrinth.com/maven" } //lazyDFU
 	maven { url "https://maven.terraformersmc.com" } //modmenu
 	maven { url "https://ladysnake.jfrog.io/artifactory/mods" } //CCA
 	maven { url "https://maven.terraformersmc.com" } //trinkets
@@ -21,13 +21,14 @@ repositories {
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "dev.emi:trinkets:${project.trinkets_version}"
-	
-	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:7.1.357"
-	modRuntimeOnly "com.terraformersmc:modmenu:3.0.1"
-	modRuntimeOnly "supercoder79:databreaker:0.2.8"
+
+	modLocalRuntime "me.shedaniel:RoughlyEnoughItems-fabric:8.0.442"
+	modLocalRuntime "com.terraformersmc:modmenu:3.1.0"
+	modLocalRuntime "maven.modrinth:lazydfu:0.1.2"
 }
 
 processResources {
