--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs = -Xmx1G
+org.gradle.parallel = true
 
 # Mod Properties
 mod_version = 1.3.1
@@ -9,6 +10,6 @@ archives_base_name = villager-hats-mod
 # Dependencies
 minecraft_version = 1.18.2
 yarn_mappings = 1.18.2+build.3
-loader_version = 0.13.3
+loader_version = 0.14.5
 fabric_version = 0.51.1+1.18.2
-trinkets_version = 3.3.0
+trinkets_version = 3.3.1
