--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-mod_version = 1.3.1
+mod_version = 1.4.0
 maven_group = ru.pinkgoosik
-archives_base_name = villager-hats-mod
+archives_base_name = villager-hats
 
 # Dependencies
 minecraft_version = 1.18.2
