--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,6 @@ repositories {
         url "https://api.modrinth.com/maven"
         content { includeGroup "maven.modrinth" }
     }
-	maven { url "https://maven.shedaniel.me" } //rei
 	maven { url "https://ladysnake.jfrog.io/artifactory/mods" } //CCA
 	maven { url "https://maven.terraformersmc.com" } //trinkets
 }
@@ -26,7 +25,7 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "dev.emi:trinkets:${project.trinkets_version}"
 
-	modLocalRuntime "me.shedaniel:RoughlyEnoughItems-fabric:10.0.581"
+	modLocalRuntime "maven.modrinth:emi:0.5.2+1.19.3"
 	modLocalRuntime "maven.modrinth:lazydfu:0.1.3"
 	modLocalRuntime "maven.modrinth:ferrite-core:5.1.0-fabric"
 	modLocalRuntime "maven.modrinth:starlight:1.1.1+1.19"
