--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id "fabric-loom" version "1.0-SNAPSHOT"
+	id "fabric-loom" version "1.1-SNAPSHOT"
 	id "io.github.juuxel.loom-quiltflower" version "1.8.0"
 	id "io.github.p03w.machete" version "1.2.0"
 }
@@ -25,11 +25,9 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "dev.emi:trinkets:${project.trinkets_version}"
 
-	modLocalRuntime "maven.modrinth:emi:0.5.2+1.19.3"
-	modLocalRuntime "maven.modrinth:lazydfu:0.1.3"
-	modLocalRuntime "maven.modrinth:ferrite-core:5.1.0-fabric"
-	modLocalRuntime "maven.modrinth:starlight:1.1.1+1.19"
-	modLocalRuntime "maven.modrinth:modmenu:5.0.2"
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-api:${project.cca_version}"
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
+	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
 }
 
 processResources {
