--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,14 @@ org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-mod_version = 1.5.2
+mod_version = 1.6.0
 maven_group = ru.pinkgoosik
 archives_base_name = villager-hats
 
 # Dependencies
-minecraft_version = 1.19.3
-yarn_mappings = 1.19.3+build.3
-loader_version = 0.14.11
-fabric_version = 0.69.1+1.19.3
-trinkets_version = 3.5.0
+minecraft_version = 1.19.4
+yarn_mappings = 1.19.4+build.1
+loader_version = 0.14.17
+fabric_version = 0.76.0+1.19.4
+trinkets_version = 3.6.0
+cca_version = 5.1.0
