--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 plugins {
-	id "fabric-loom" version "1.1-SNAPSHOT"
-	id "io.github.juuxel.loom-quiltflower" version "1.8.0"
-	id "io.github.p03w.machete" version "1.2.0"
+	id "fabric-loom" version "1.2-SNAPSHOT"
+	id "io.github.juuxel.loom-quiltflower" version "1.10.0"
 }
 
-archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
@@ -25,15 +23,19 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "dev.emi:trinkets:${project.trinkets_version}"
 
-	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-api:${project.cca_version}"
+//	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-api:${project.cca_version}"
 	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
 	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
 }
 
+base {
+	archivesName = project.archives_base_name
+}
+
 processResources {
-	inputs.property "version", project.mod_version
+	inputs.property "version", project.version
 	filesMatching("fabric.mod.json") {
-		expand "version": project.mod_version
+		expand "version": project.version
 	}
 }
 
