--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-	id "fabric-loom" version "1.2-SNAPSHOT"
-	id "io.github.juuxel.loom-quiltflower" version "1.10.0"
+	id "fabric-loom" version "1.4-SNAPSHOT"
 }
 
 version = project.mod_version
@@ -11,16 +10,16 @@ repositories {
         url "https://api.modrinth.com/maven"
         content { includeGroup "maven.modrinth" }
     }
-	maven { url "https://ladysnake.jfrog.io/artifactory/mods" } //CCA
+	maven { url "https://maven.ladysnake.org/releases" } //CCA
 	maven { url "https://maven.terraformersmc.com" } //trinkets
 }
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api}"
 	modImplementation "dev.emi:trinkets:${project.trinkets_version}"
 
 //	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-api:${project.cca_version}"
