--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-mod_version = 1.6.1+1.20
+mod_version = 1.6.2+1.20
 maven_group = ru.pinkgoosik
 archives_base_name = villager-hats
 
 # Dependencies
-minecraft_version = 1.20
-yarn_mappings = 1.20+build.1
-loader_version = 0.14.21
-fabric_version = 0.83.0+1.20
-trinkets_version = 3.7.0
-cca_version = 5.2.0
+minecraft_version = 1.20.1
+yarn_mappings = 1.20.1+build.10
+fabric_loader = 0.15.2
+fabric_api = 0.91.0+1.20.1
+trinkets_version = 3.7.1
+cca_version = 5.2.2
