--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Gradle
-org.gradle.jvmargs = -Xmx2G
+org.gradle.jvmargs = -Xmx4G
 org.gradle.parallel = true
 org.gradle.daemon = true
 org.gradle.debug = false
@@ -10,8 +10,8 @@ maven_group = ru.pinkgoosik
 
 # Mod Properties
 mod_name = Villager Hats
-mod_version = 1.7.0+1.20.4
-mod_description = A simple Mod that allows you to wear Villagers' Hats as Trinkets.
+mod_version = 1.7.1+1.21
+mod_description = A simple mod that allows you to wear villagers' hats as accessories.
 mod_id = villagerhats
 homepage_url = https://modrinth.com/mod/villager-hats
 sources_url = https://github.com/PinkGoosik/villager-hats
@@ -19,19 +19,24 @@ issue_tracker_url = https://github.com/PinkGoosik/villager-hats/issues
 license = MIT
 
 # Minecraft
-minecraft_version = 1.20.4
-minecraft_version_range = [1.20.3,1.21)
-minecraft_version_range_fabric = >=1.20.3 <1.21
+minecraft_version = 1.21
+minecraft_version_range = [1.21,)
+minecraft_version_range_fabric = >=1.21 <1.22
 enabled_platforms = fabric,neoforge
 
 # Fabric
-fabric_loader_version = 0.15.3
-fabric_api_version = 0.93.1+1.20.4
+fabric_loader_version = 0.15.11
+fabric_api_version = 0.100.6+1.21
 trinkets_version = 3.8.0
-cca_version = 5.4.0
-modmenu_version = 9.0.0
+cca_version = 6.1.0
+modmenu_version = 11.0.1
 
 # NeoForge
-neoforge_version = 20.4.69-beta
-neoforge_version_range = [20.4,)
+neoforge_version = 21.0.78-beta
+neoforge_version_range = [21.0,)
 curios_version = 7.0.0-beta.3+1.20.4
+curios_kirill = 9.0.4+1.21
+accessories = 1.0.0-beta.17+1.21
+
+# Parchment
+parchment_version=2024.06.23
