--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -4,7 +4,7 @@ issueTrackerURL = "${issue_tracker_url}" # Change this to the link to your mod's
 license = "${license}"
 
 [[mods]]
-modId = "${id}"
+modId = "${mod_id}"
 displayName = "${name}"
 version = "${version}"
 description = '''${description}'''
@@ -12,7 +12,7 @@ authors = "PinkGoosik"
 logoFile = "assets/villagerhats/icon.png"
 
 [[mixins]]
-config = "${id}-common.mixins.json"
+config = "${mod_id}-common.mixins.json"
 
 [[mixins]]
-config = "${id}.mixins.json"
+config = "${mod_id}.mixins.json"
